# ccl-1.0-old

./: Makefile.am  Makefile.in  README.md  ccl-1.1.0.files  configure  configure.ac
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
include/: ccl_config.h.in~  ccl_learn_alpha.h  ccl_learn_lambda.h  ccl_learn_ncl.h  ccl_learn_nhat.h  ccl_learn_policy.h  ccl_math.h  get_nmse.h
matlab/: distances.m  generate_lwr_ccl.m  get_poe.m  learn_alpha_ccl.m  learn_ccl_pi.m  learn_lambda_ccl.m  learn_lwccl.m  learn_ncl.m  learn_nhat.m  phi_linear.m  predict_local_linear.m  solve_lm_ncl.m  visualise_move.m
matlab/Demo_Demo_Demo/: J_planar_2_link_arm.m  J_planar_3_link_arm.m  demo_resolve_nullspace_policy.m  demo_resolve_nullspace_projection.m  demo_resolve_nullspace_resolution.m  plot_arm_3link.m  r_planar_2_link_arm.m  r_planar_3_link_arm.m  r_planar_3_link_arm_all.m  visualise_move_3link.m  visualise_move_dual_3link.m  write_to_file.m
src/: ccl.c  ccl_learn_alpha.c  ccl_learn_lambda.c  ccl_learn_ncl.c  ccl_learn_policy.c  ccl_math.c  main.c~
